# sinau

./: LICENSE  README.md  pyproject.toml
demo-selenium/: try-selenium.py
fast_api/: main.py
polling/polling/: settings.py
reamo/: manage.py
reamo/polls/: views.py
reamo/reamo/: asgi.py  settings.py  urls.py  wsgi.py
sinau/: DiskInfo.ini  disk_usage.py  find_method.py  flash utility.py  isPhone.py  isPhoneRegex.py  mapIt.py  python_basic.py  rv_test.py  strings.py  truth_dare.py
tests/: test_python_basic.py
